# googletest_exsample

./: CMakeLists.txt
generator/cpp/: gmock_class.py
mock/: BCM2835Lib_MOCK.cpp  BCM2835Lib_MOCK.hpp
src/: BCM2835Lib.h  cmodule.c  cmodule.h
test/: test_BCM2835Lib.cpp  test_cmodule.cpp
